kubernetes-manifests/ambassador-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ambassador
spec:
  type: NodePort
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30580
  selector:
    service: ambassador
