kubernetes-manifests/authservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: authservice
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
    - port: 3000
      name: http
      targetPort: http-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
        - name: authservice
          image: authservice
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-api
              containerPort: 3000
          resources:
            limits:
              cpu: "0.1"
              memory: 100Mi
