kubernetes-manifests/faultservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: faultservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: faultservice
  template:
    metadata:
      labels:
        app: faultservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: faultservice
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            periodSeconds: 5
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:8080"]
          livenessProbe:
            periodSeconds: 5
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:8080"]
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: faultservice
spec:
  type: ClusterIP
  selector:
    app: faultservice
  ports:
    - name: grpc
      port: 5000
      targetPort: 8080
