kubernetes-manifests/jenkinsservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkinsservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkinsservice
  template:
    metadata:
      labels:
        app: jenkinsservice
  spec:
    terminationGracePeriodSeconds: 5
    containers:
      - name: server
        image: localhost:5001/jenkins
        ports:
          - name: http-port
            containerPort: 8080
          - name: jnlp-port
            containerPort: 50000
        volumeMounts:
          - name: jenkins-home
            mountPath: /var/jenkins_home
        resources:
          requests:
            cpu: 200m
            memory: 128Mi
          limits:
            cpu: 400m
            memory: 256Mi
    volumes:
      - name: jenkins-home
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: jenkinsservice
spec:
  type: ClusterIP
  selector:
    app: jenkinsservice
  ports:
    - port: 8080
      targetPort: 8080
