kubernetes-manifests/testservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testservice
  template:
    metadata:
      labels:
        app: testservice
    spec:
      containers:
        - name: server
          image: testservice
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:8080"]
          livenessProbe:
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:8080"]
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: testservice
spec:
  type: NodePort
  selector:
    app: testservice
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
